--- a/bower.json
+++ b/bower.json
@@ -23,16 +23,7 @@
     "AdminLTE": "admin-lte#~2.3.2",
     "components-font-awesome": "~4.5.0",
     "Ionicons": "ionicons#~2.0.1",
-    "iCheck": "~1.0.2",
-    "morris.js": "~0.5.1",
-    "jvectormap": "~2.0.4",
-    "bootstrap-datepicker": "~1.5.0",
-    "bootstrap-daterangepicker": "~2.1.17",
-    "bootstrap3-wysihtml5-bower": "~0.3.3",
     "raphael": "~2.1.4",
-    "jquery.sparkline": "~2.1.2",
-    "jquery-slimscroll": "~1.3.7",
-    "moment": "~2.10.6",
-    "fastclick": "~1.0.6"
+    "moment": "~2.10.6"
   }
 }
