add login module

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "components-font-awesome": "~4.5.0",
     "Ionicons": "ionicons#~2.0.1",
     "raphael": "~2.1.4",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "angular-route": "~1.4.8"
   }
 }
