--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
     "loopback-datasource-juggler": "^2.39.0",
+    "nodemailer": "^1.10.0",
+    "nodemailer-smtp-pool": "^1.1.6",
+    "nodemailer-wellknown": "^0.1.7",
     "serve-favicon": "^2.0.1"
   },
   "devDependencies": {
