--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "moment": "~2.10.6",
     "angular-route": "~1.4.8",
     "angular-loading-bar": "~0.8.0",
-    "angular-animate": "~1.4.8"
+    "angular-animate": "~1.4.8",
+    "angular-bootstrap": "~0.14.3"
   }
 }
