--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "angular-route": "~1.4.8",
     "angular-loading-bar": "~0.8.0",
     "angular-animate": "~1.4.8",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "ngInfiniteScroll": "~1.2.1",
+    "angular-tablescroll": "~1.0.1"
   }
 }
