--- a/server/model-config.json
+++ b/server/model-config.json
@@ -54,5 +54,9 @@
   "roleMappingMember": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "order": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
