--- a/server/model-config.json
+++ b/server/model-config.json
@@ -58,5 +58,9 @@
   "order": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "container": {
+    "dataSource": "storage",
+    "public": true
   }
 }
