change member model to user

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -36,7 +36,7 @@
   "Email": {
     "dataSource": "emailDs"
   },
-  "member": {
+  "user": {
     "dataSource": "mongodb",
     "public": true,
     "options": {
