fix bug in user & add upload picture function

--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/api",
   "host": "localhost",
-  "repeated_signup_interval": 10,
+  "repeatedSignupInterval": 10,
   "port": 3000,
   "remoting": {
     "context": {
@@ -24,5 +24,10 @@
       "disableStackTrace": false
     }
   },
-  "legacyExplorer": false
+  "legacyExplorer": false,
+  "cloudinary":{
+      "cloud_name":"dj3pkhemu",
+      "api_key":"998742656858924",
+      "api_secret":"jXj1QbBQ1TpzB9f6Fp6n4YSBl5A"
+  }
 }
