--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "pretest": "jshint ."
   },
   "dependencies": {
+    "base64-js": "^1.0.2",
+    "cloudinary": "^1.3.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "email-existence": "^0.1.5",
@@ -16,6 +18,7 @@
     "loopback-component-storage": "^1.6.1",
     "loopback-connector-mongodb": "^1.13.2",
     "loopback-datasource-juggler": "^2.39.0",
+    "node-uuid": "^1.4.7",
     "nodemailer": "^1.10.0",
     "nodemailer-smtp-pool": "^1.1.6",
     "nodemailer-wellknown": "^0.1.7",
