add upload picture web admin

--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "angular-animate": "~1.4.8",
     "angular-bootstrap": "~0.14.3",
     "ngInfiniteScroll": "~1.2.1",
-    "angular-tablescroll": "~1.0.1"
+    "angular-tablescroll": "~1.0.1",
+    "angular-base64": "~2.0.5"
   }
 }
