--- a/package.json
+++ b/package.json
@@ -3,27 +3,36 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
-    "start": "node .",
-    "pretest": "jshint ."
+    "start": "export NODE_ENV=production && node .",
+    "dev": "export NODE_ENV=development && node .",
+    "pretest": "export NODE_ENV=test && slc run -d",
+    "test": "export NODE_ENV=test  && sleep 3 &&  mocha -R spec test --timeout  40000",
+    "posttest": " kill $(ps -ax|grep 'sl-run.js --no-detach server/server.js'|awk '{print $1}')"
   },
   "dependencies": {
+    "base64-arraybuffer": "^0.1.5",
     "base64-js": "^1.0.2",
     "cloudinary": "^1.3.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "email-existence": "^0.1.5",
+    "excel": "^0.1.4",
+    "fluentreports": "^1.0.6",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.1.0",
     "loopback-component-storage": "^1.6.1",
     "loopback-connector-mongodb": "^1.13.2",
     "loopback-datasource-juggler": "^2.39.0",
+    "mocha": "^2.4.5",
     "node-uuid": "^1.4.7",
     "nodemailer": "^1.10.0",
     "nodemailer-smtp-pool": "^1.1.6",
     "nodemailer-wellknown": "^0.1.7",
     "serve-favicon": "^2.0.1",
-    "smtp-protocol": "^2.4.6"
+    "sleep": "^3.0.1",
+    "smtp-protocol": "^2.4.6",
+    "supertest": "^1.1.0"
   },
   "devDependencies": {
     "jshint": "^2.5.6"
