refactor code:add angular formly

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -50,5 +50,9 @@
   "location": {
     "dataSource": "memory",
     "public": true
+  },
+  "webAppConfig": {
+    "dataSource": "memory",
+    "public": true
   }
 }
