--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "angular-base64": "~2.0.5",
     "api-check": "~7.5.5",
     "angular-formly": "~7.3.9",
-    "angular-formly-templates-bootstrap": "~6.2.0"
+    "angular-formly-templates-bootstrap": "~6.2.0",
+    "pdfjs-bower": "~1.0.233"
   }
 }
